@startuml

class Car{
    + string Brand
    # int CurrentGear
    - float _speed
    - float _revolutions
    + List<Door> Doors
    + List<Tire> Tires
    ---
    Car(string brandParamater)
    Car(string brandParamater, int amountOfDoors, int amountOfTires, int tireSize)
    + void Break()
    + void Accelerate(float forceParameter)
    + int ChangeGear(int amount)
    + void GetIn(Door doorParameter)

}

class Tire{

}

class Door{

}

Car --> Tire
Car --> Door 

@enduml